@@ -1,4 +1,10 @@
 2014-01-06  Stipe Tolj  <stolj at kannel.org>
+    * doc/userguide/userguide.xml: document HTTP admin URI /remove-message
+    * gw/bb_http.c, gw/bearerbox.[ch]: implement HTTP admin URI command
+      /remove_message.
+    Thanks to Alejandro Guerrieri for the patchset.
+    
+2014-01-06  Stipe Tolj  <stolj at kannel.org>
     * configure[.in]: implement --with-redis option to support Redis.
     * gw-config.h.in: add HAVE_REDIS macro definition.
     * doc/examples/dlr-redis.conf: Redis config example.
